# triskelion

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: design.md
src/: archive.rs  lib.rs  mcp.rs  shared.rs
src/client/: api.rs  config.rs  mcp2cli.rs  mod.rs  secrets.rs  skill.rs
src/server/: admin.rs  auth.rs  crypto.rs  db.rs  error.rs  ldap.rs  mod.rs  routes.rs  settings.rs  skillpack.rs  skills.rs  web.rs
src/server/db/: decode.rs  mod.rs  schema.rs  translate.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AdminPanel.tsx  Brand.tsx  CreateMcpModal.tsx  CreateSkillModal.tsx  DetailModal.tsx  Header.tsx  LoginModal.tsx  Markdown.tsx  McpCard.tsx  Modal.tsx  ReactionBar.tsx  SecretModal.tsx  SkillCard.tsx  SkillDetailModal.tsx  ToolTester.tsx  TransferModal.tsx  icons.tsx
web/src/lib/: api.ts  color.ts  types.ts
