[package]
name = "triskelion"
version = "0.1.0"
edition = "2024"
description = "Triskelion — unified resource gateway and open marketplace for LLM agent tools"
license = "Apache-2.0"
default-run = "tsk"

[lib]
name = "triskelion"
path = "src/lib.rs"

# tsk —— 客户端 CLI（client 侧）
[[bin]]
name = "tsk"
path = "src/bin/tsk.rs"
required-features = ["client"]

# triskelion —— Hub Web Server（server 侧）
[[bin]]
name = "triskelion"
path = "src/bin/triskelion.rs"
required-features = ["server"]

[features]
default = ["client", "server"]
# tsk 客户端 CLI 侧能力
client = [
    "dep:clap",
    "dep:reqwest",
    "dep:dialoguer",
    "dep:rpassword",
    "dep:dirs",
    # 技能包 build/pull：tar 归档 + zstd 压缩
    "dep:tar",
    "dep:zstd",
    # 向后兼容：旧版 .tar.gz 压缩体仍可解压
    "dep:flate2",
    "dep:sha2",
]
# triskelion Hub 服务端侧能力
server = [
    "dep:axum",
    "dep:tokio",
    "dep:rusqlite",
    "dep:jsonwebtoken",
    "dep:argon2",
    "dep:aes-gcm",
    "dep:rand",
    "dep:base64",
    "dep:rust-embed",
    "dep:mime_guess",
    # Hub 作为网关需连接 MCP（crate::mcp 用阻塞 reqwest）
    "dep:reqwest",
    # 校验上传技能包压缩体的 sha256
    "dep:sha2",
    # 管理后台「全量资源包」导入/导出：tar 归档 + zstd 压缩
    "dep:tar",
    "dep:zstd",
]

[dependencies]
# 共享层（始终构建）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# client 侧
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
], optional = true }
dialoguer = { version = "0.11", optional = true }
rpassword = { version = "7", optional = true }
dirs = { version = "5", optional = true }
# 技能包打包：tar 归档 + zstd 流式压缩（高压缩比，兼顾性能；zstdmt 启用多线程编码）
tar = { version = "0.4", optional = true }
zstd = { version = "0.13", features = ["zstdmt"], optional = true }
# 向后兼容：解压旧版 gzip 压缩体（仅解码路径使用）
flate2 = { version = "1", optional = true }
# 压缩体内容寻址与完整性校验（client 打包 / server 校验）
sha2 = { version = "0.10", optional = true }

# server 侧
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
], optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
jsonwebtoken = { version = "9", optional = true }
argon2 = { version = "0.5", optional = true }
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
# 内置 Web UI：把 web/dist 编译进二进制
rust-embed = { version = "8", features = [
    "debug-embed",
    "mime-guess",
], optional = true }
mime_guess = { version = "2", optional = true }

[dev-dependencies]
