[package]
name = "triskelion"
version = "0.1.3"
edition = "2024"
description = "Triskelion — unified resource gateway and open marketplace for LLM agent tools"
license = "Apache-2.0"
default-run = "tsk"

[lib]
name = "triskelion"
path = "src/lib.rs"

# tsk —— 客户端 CLI（client 侧）
[[bin]]
name = "tsk"
path = "src/bin/tsk.rs"
required-features = ["client"]

# triskelion —— Hub Web Server（server 侧）
[[bin]]
name = "triskelion"
path = "src/bin/triskelion.rs"
required-features = ["server"]

[features]
default = ["client", "server"]
# tsk 客户端 CLI 侧能力
client = [
    "dep:clap",
    "dep:reqwest",
    "dep:rustls",
    "dep:dialoguer",
    "dep:dirs",
    # 技能包 build/pull：tar 归档 + zstd 压缩
    "dep:tar",
    "dep:zstd",
    # 向后兼容：旧版 .tar.gz 压缩体仍可解压
    "dep:flate2",
    "dep:sha2",
    # Ctrl+C 中断：交互提示 / 长任务 / tsk run 子进程期间都能干净退出
    "dep:ctrlc",
]
# triskelion Hub 服务端侧能力
server = [
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:jsonwebtoken",
    "dep:argon2",
    "dep:aes-gcm",
    "dep:rand",
    "dep:base64",
    "dep:rust-embed",
    "dep:mime_guess",
    # Hub 作为网关需连接 MCP（crate::mcp 用阻塞 reqwest）
    "dep:reqwest",
    "dep:rustls",
    # 校验上传技能包压缩体的 sha256
    "dep:sha2",
    # 管理后台「全量资源包」导入/导出：tar 归档 + zstd 压缩
    "dep:tar",
    "dep:zstd",
    # Web 端「拖入压缩包创建技能」：解 zip、兼容历史 gzip 压缩体
    "dep:zip",
    "dep:flate2",
    # LDAP 认证：企业目录绑定认证与本地用户同步
    "dep:ldap3",
    # 调试期：允许浏览器/Tauri webview 跨源直连本 Hub（CORS）
    "dep:tower-http",
    # 默认数据目录 ~/.triskelion 需要解析用户主目录
    "dep:dirs",
]

[dependencies]
# 共享层（始终构建）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# client 侧
clap = { version = "4", features = ["derive"], optional = true }
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "query",
    "rustls-no-provider",
    "webpki-roots",
], optional = true }
# reqwest 0.13 的 rustls 特性默认改用 aws-lc-rs（Windows 需 NASM+CMake，Linux/交叉编译易挂）；
# 显式改回 ring：自带预生成汇编，无需额外构建工具。进程启动时安装为默认 CryptoProvider。
rustls = { version = "0.23", default-features = false, features = [
    "ring",
], optional = true }
# 隐藏输入密码；password 特性走 console 宽字符 API，兼容 Windows 非 UTF-8 代码页
dialoguer = { version = "0.12", features = ["password"], optional = true }
dirs = { version = "6.0.0", optional = true }
# 技能包打包：tar 归档 + zstd 流式压缩（高压缩比，兼顾性能；zstdmt 启用多线程编码）
tar = { version = "0.4", optional = true }
zstd = { version = "0.13", features = ["zstdmt"], optional = true }
# 向后兼容：解压旧版 gzip 压缩体（仅解码路径使用）
flate2 = { version = "1", optional = true }
# 压缩体内容寻址与完整性校验（client 打包 / server 校验）
sha2 = { version = "0.11.0", optional = true }
# 客户端 Ctrl+C：注册中断处理，按下即干净退出（含 tsk run 子进程 / 交互提示）
ctrlc = { version = "3", optional = true }

# server 侧
axum = { version = "0.8.9", optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
], optional = true }
# 数据层：sqlx 异步连接池，SQLite 默认（bundled，同 rusqlite 时代无外部依赖）；
# PostgreSQL / MySQL 后端按阶段接入（纯 Rust 驱动，无 OpenSSL/libpq/libmysqlclient）。
# 不用 macros/migrate feature：无编译期 DATABASE_URL 依赖，迁移沿用运行时吞错式补列。
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "sqlite",
    "postgres",
    "mysql",
], optional = true }
# jsonwebtoken 10 默认不含加密后端，须显式选一个。用 rust_crypto（纯 Rust，HS256/HMAC，
# 无需 CMake/NASM），避免 aws_lc_rs 的外部构建工具依赖。
jsonwebtoken = { version = "10", default-features = false, features = [
    "use_pem",
    "rust_crypto",
], optional = true }
argon2 = { version = "0.5", optional = true }
aes-gcm = { version = "0.11", optional = true }
rand = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
# 内置 Web UI：把 web/dist 编译进二进制
rust-embed = { version = "8", features = [
    "debug-embed",
    "mime-guess",
], optional = true }
mime_guess = { version = "2", optional = true }
# Web 端「拖入压缩包创建技能」：读取用户上传的 zip（仅解包，deflate/store 覆盖绝大多数系统压缩产物）
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
# 调试期 CORS：放行跨源前端直连
tower-http = { version = "0.7", features = ["cors"], optional = true }
# LDAP 客户端：走 rustls(ring)，与本项目既有 TLS 栈一致，避免引入 OpenSSL
ldap3 = { version = "0.12", default-features = false, features = [
    "tls-rustls-ring",
], optional = true }

[dev-dependencies]
